# RG-projekat

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  coverage.info  cppcheck_report.txt  imgui.ini  nakon_optimizacija.txt  project_base  promene.txt  showargs.py
coverage_html/: index-sort-f.html  index-sort-l.html  index.html
coverage_html/assimp/: Importer.hpp.func-sort-c.html  Importer.hpp.func.html  Importer.hpp.gcov.html  color4.h.func-sort-c.html  color4.h.func.html  color4.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  material.inl.func-sort-c.html  material.inl.func.html  material.inl.gcov.html  mesh.h.func-sort-c.html  mesh.h.func.html  mesh.h.gcov.html  types.h.func-sort-c.html  types.h.func.html  types.h.gcov.html
coverage_html/include/: common.h.func-sort-c.html  common.h.func.html  common.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  stb_image.h.func-sort-c.html  stb_image.h.func.html  stb_image.h.gcov.html
coverage_html/src/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
docs/html/: Camera_8h.html  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  Error_8h.html  Error_8h__dep__incl.map  Error_8h__dep__incl.md5  Error_8h__incl.map  Error_8h__incl.md5  Error_8h_source.html  README_8md.html  Shader_8h.html  Shader_8h__incl.map  Shader_8h__incl.md5  Shader_8h_source.html  Texture2D_8h.html  Texture2D_8h__incl.map  Texture2D_8h__incl.md5  Texture2D_8h_source.html  annotated.html  build_2CMakeFiles_23_822_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build_2CMakeFiles_23_822_81_2CompilerIdC_2CMakeCCompilerId_8c.html  build_2Desktop__Qt__6__6__3__GCC__64bit-Debug_2CMakeFiles_23_829_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build_2Desktop__Qt__6__6__3__GCC__64bit-Debug_2CMakeFiles_23_829_83_2CompilerIdC_2CMakeCCompilerId_8c.html  build_2Desktop__Qt__6__6__3__GCC__64bit-Debug_2configuration_2root__directory_8h.html  build_2configuration_2root__directory_8h.html  (+716 more)
include/: common.h  stb_image.h
resources/: program_state.txt
src/: main.cpp
(+384 files in other folders)
